--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,11 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title="Power Passenger Passage">
   <header>
-    <h1>Power Passenger Passage</h1>
+    <h1 class="text-4xl lsa lsa-slide-up">
+      Life coaching for preconception, pregnancy, and beyond
+    </h1>
+    <p class="text-xl lsa lsa-slide-up delay-200">
+      Experience your BEST pregnancy with life coaching
+    </p>
   </header>
 </Layout>
