feat(app): global styles - font sizes, line height, spacing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,8 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title="Power Passenger Passage">
   <header>
-    <h1 class="text-4xl lsa lsa-slide-up">
-      Life coaching for preconception, pregnancy, and beyond
-    </h1>
-    <p class="text-xl lsa lsa-slide-up delay-200">
+    <h1 class="text-xl lsa lsa-slide-up">Life coaching for preconception, pregnancy, and beyond</h1>
+    <p class="text-s lsa lsa-slide-up delay-200">
       Experience your BEST pregnancy with life coaching
     </p>
   </header>
