--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,27 @@
   --color-red-100: #f6eaee;
   --color-tan-100: #fff6f0;
 
-  /* TODO: add text sizes, heights, spacing, padding, etc. */
+  /* Font sizes: source (https://fluid-type.tolin.ski/) */
+  --fs-2xs: clamp(0.64rem, 0.752941vi + 0.45rem, 0.96rem);
+  --fs-xs: clamp(0.8rem, 0.941176vi + 0.56rem, 1.2rem);
+  --fs-base: clamp(1rem, 1.176471vi + 0.71rem, 1.5rem);
+  --fs-s: clamp(1.25rem, 1.482353vi + 0.88rem, 1.88rem);
+  --fs-m: clamp(1.56rem, 1.835294vi + 1.1rem, 2.34rem);
+  --fs-l: clamp(1.95rem, 2.305882vi + 1.37rem, 2.93rem);
+  --fs-xl: clamp(2.44rem, 2.870588vi + 1.72rem, 3.66rem);
+  --fs-2xl: clamp(3.05rem, 3.6vi + 2.15rem, 4.58rem);
+  --fs-3xl: clamp(3.81rem, 4.494118vi + 2.69rem, 5.72rem);
+  --fs-4xl: clamp(4.77rem, 5.6vi + 3.37rem, 7.15rem);
+  --fs-5xl: clamp(5.96rem, 7.011765vi + 4.21rem, 8.94rem);
+  --fs-6xl: clamp(7.45rem, 8.776471vi + 5.26rem, 11.18rem);
+  --fs-7xl: clamp(9.31rem, 10.964706vi + 6.57rem, 13.97rem);
+  --fs-8xl: clamp(11.64rem, 13.694118vi + 8.22rem, 17.46rem);
+  --fs-9xl: clamp(14.55rem, 17.129412vi + 10.27rem, 21.83rem);
+  --line-height: calc(0.6rem + 2ex);
+
+  /* Spacing */
+  --site-padding: clamp(1rem, 2vw, 2rem);
+  --section-padding: clamp(7rem, 10vw, 9rem);
 }
 
 /* General */
@@ -87,6 +107,21 @@ html {
 
   /* Font */
   @apply font-body;
+}
+
+body {
+  overflow-x: hidden;
+  padding: var(--site-padding);
+}
+
+section {
+  padding: var(--section-padding) 0;
+}
+
+header,
+main,
+nav {
+  @apply w-full max-w-screen-2xl mx-auto;
 }
 
 img,
