--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css'
+import Navigation from '../components/ui/Navigation.astro'
 
 export interface Props {
   title: string
@@ -91,7 +92,7 @@ const socialImageURL = new URL(socialImage || '/images/og-image.png', canonicalU
   </head>
 
   <body>
-    <!-- <Navigation /> -->
+    <Navigation />
     <slot />
     <!-- <Footer /> -->
   </body>
