--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon/components'
 ---
 
 <nav
-  class="fixed left-0 right-0 w-[calc(100vw-var(--site-padding)*2)] min-h-[var(--nav-height)] z-20 mt-[var(--site-padding)] px-8 py-2 flex items-center justify-between gap-4 backdrop-blur-md border rounded-full"
+  class="fixed left-0 right-0 w-[calc(100vw-var(--site-padding)*2)] min-h-[var(--nav-height)] z-20 mt-[var(--site-padding)] px-8 py-2 flex items-center justify-between gap-4 bg-whiteTransparent backdrop-blur-md border rounded-full"
 >
   <a href="/" title="Power Passenger Passage Home" aria-label="Power Passenger Passage Home">
     <Icon name="logo" class="size-20" />
