--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,10 +73,12 @@
 :root {
   --color-transparent: transparent;
   --color-white: #fffafa;
+  --color-white-transparent: #fffffa80;
   --color-black: #000000;
   --color-grey: #999697;
   --color-slate: #332d2e;
   --color-red-900: #a82c51;
+  --color-red-800: #b95674;
   --color-red-500: #d496a8;
   --color-red-100: #f6eaee;
   --color-tan-100: #fff6f0;
