--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,17 @@
 ---
+import emmieImage from '../assets/emmie-1.png'
+import CTA from '../components/text/CTA.astro'
+import PageHeader from '../components/ui/PageHeader.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="Power Passenger Passage | About">
-  <header>
-    <h1 class="text-xl lsa lsa-slide-up">About</h1>
-    <p class="text-s lsa lsa-slide-up delay-200">Learn more about Power Passenger Passage</p>
-  </header>
+  <PageHeader
+    title='About <span class="font-bold text-red-900">Emmie</span>'
+    subtitle="I am a life coach and board certified OBGYN a Maternal-Fetal Medicine specialist. As a life coach I work with women on their journey through preconception, pregnancy and postpartum. I help women manage their minds around the uncertainty and unknown of a first pregnancy, and overcome fear and anxiety related to past pregnancy complications and other maternal high-risk conditions."
+    image={emmieImage}
+    imageAlt="Emmie Strassberg, Power Passenger Passage"
+  >
+    <CTA href="/contact" text="Book a Free Call" class="m-auto md:m-0" />
+  </PageHeader>
 </Layout>
