--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,12 @@
 ---
+import PageHeader from '../components/ui/PageHeader.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="Power Passenger Passage | Blog">
-  <header>
-    <h1 class="text-xl lsa lsa-slide-up">Blog</h1>
-    <p class="text-s lsa lsa-slide-up delay-200">Read the latest from Power Passenger Passage</p>
-  </header>
+  <!-- TODO: add a newsletter signup CTA as <slot /> content -->
+  <PageHeader
+    title='<span class="font-bold text-red-900">Empower</span> Your Healthcare Journey'
+    subtitle="Explore insights and resources designed to guide women on their personal healthcare journey. From finding peace in pregnancy to reclaiming control of your well-being, our blog is here to inspire, inform, and empower."
+  />
 </Layout>
