--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,6 +12,6 @@ import Layout from '../layouts/Layout.astro'
     image={emmieImage}
     imageAlt="Emmie Strassberg, Power Passenger Passage"
   >
-    <CTA href="/contact" text="Book a Free Call" class="m-auto md:m-0" />
+    <CTA type="link" href="/contact" text="Book a Free Call" class="m-auto md:m-0" />
   </PageHeader>
 </Layout>
