--- a/src/components/text/CTA.astro
+++ b/src/components/text/CTA.astro
@@ -1,19 +1,34 @@
 ---
 export interface Props {
+  type: 'button' | 'link'
   text: string
-  href: string
+  href?: string
   newWindow?: boolean
   class?: string
 }
 
-const { text, href, newWindow, class: className } = Astro.props
+const { type, text, href, newWindow, class: className } = Astro.props
 ---
 
-<a
-  href={href}
-  class={`${className} block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-lg transition`}
-  target={newWindow ? '_blank' : '_self'}
-  rel={newWindow ? 'noopener noreferrer' : ''}
-  title={text}
-  aria-label={text}>{text}</a
->
+{
+  type === 'link' ? (
+    <a
+      href={href}
+      class={`${className} block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-lg shadow-sm transition`}
+      target={newWindow ? '_blank' : '_self'}
+      rel={newWindow ? 'noopener noreferrer' : ''}
+      title={text}
+      aria-label={text}
+    >
+      {text}
+    </a>
+  ) : (
+    <button
+      class={`${className} block max-w-fit px-[clamp(1rem,2vi,2rem)] py-[clamp(0.5rem,2vi,1rem)] text-base text-white hover:text-white bg-red-900 hover:bg-red-800 rounded-lg shadow-sm transition`}
+      title={text}
+      aria-label={text}
+    >
+      {text}
+    </button>
+  )
+}
