--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css'
 import Navigation from '../components/ui/Navigation.astro'
+import Footer from '../components/ui/Footer.astro'
 
 export interface Props {
   title: string
@@ -94,7 +95,7 @@ const socialImageURL = new URL(socialImage || '/images/og-image.png', canonicalU
   <body>
     <Navigation />
     <slot />
-    <!-- <Footer /> -->
+    <Footer />
   </body>
 </html>
 
