--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,6 +5,6 @@ import Layout from '../layouts/Layout.astro'
 <Layout title="Power Passenger Passage | 404">
   <header>
     <h1 class="text-xl lsa lsa-slide-up">404</h1>
-    <p class="text-s lsa lsa-slide-up delay-200">Page not found</p>
+    <p class="text-sm lsa lsa-slide-up delay-200">Page not found</p>
   </header>
 </Layout>
