--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,6 +5,6 @@ import Layout from '../layouts/Layout.astro'
 <Layout title="Power Passenger Passage | Contact">
   <header>
     <h1 class="text-xl lsa lsa-slide-up">Contact</h1>
-    <p class="text-s lsa lsa-slide-up delay-200">Get in touch with Power Passenger Passage</p>
+    <p class="text-sm lsa lsa-slide-up delay-200">Get in touch with Power Passenger Passage</p>
   </header>
 </Layout>
