--- a/src/components/ui/PageHeader.astro
+++ b/src/components/ui/PageHeader.astro
@@ -19,13 +19,15 @@ export interface Props {
 const { title, subtitle, image, imageAlt } = Astro.props
 ---
 
-<header class="md:h-dvh p-[var(--site-padding)] bg-gradient-to-b from-tan-100 to-white">
+<header
+  class="md:h-dvh pb-sectionPadding px-sitePadding md:py-sitePadding bg-gradient-to-b from-tan-100 to-white"
+>
   {
     image && imageAlt ? (
-      <div class="max-w-6xl mx-auto pt-[calc(var(--nav-height)+4rem)] md:pt-[var(--nav-height)] h-full flex flex-col md:flex-row justify-between gap-16 justify-items-center items-center">
+      <div class="max-w-6xl mx-auto pt-[calc(var(--nav-height)+4rem)] md:pt-navHeight h-full flex flex-col md:flex-row justify-between gap-16 justify-items-center items-center">
         <div class="md:w-3/5 flex flex-col items-center md:items-start gap-8 text-center md:text-left">
           <Icon name="zig-zag" class="w-16 lsa lsa-slide-up no-repeat" />
-          <h1 class="text-xl lsa lsa-slide-up no-repeat" set:html={title} />
+          <h1 class="lsa lsa-slide-up no-repeat" set:html={title} />
           <p class="text-base lsa lsa-slide-up no-repeat delay-200" set:html={subtitle} />
           <div class="lsa lsa-slide-up no-repeat delay-500">
             <slot />
@@ -40,9 +42,9 @@ const { title, subtitle, image, imageAlt } = Astro.props
         />
       </div>
     ) : (
-      <div class="max-w-4xl mx-auto pt-[calc(var(--nav-height)+4rem)] md:pt-[var(--nav-height)] h-full flex flex-col items-center md:justify-center gap-8 text-center ">
+      <div class="max-w-4xl mx-auto pt-[calc(var(--nav-height)+4rem)] md:pt-navHeight h-full flex flex-col items-center md:justify-center gap-8 text-center ">
         <Icon name="zig-zag" class="w-16 lsa lsa-slide-up no-repeat" />
-        <h1 class="text-xl lsa lsa-slide-up no-repeat" set:html={title} />
+        <h1 class="lsa lsa-slide-up no-repeat" set:html={title} />
         <p class="text-base lsa lsa-slide-up no-repeat delay-200" set:html={subtitle} />
         <div class="w-full lsa lsa-slide-up no-repeat delay-500">
           <slot />
