--- a/src/components/ui/Subscribe.astro
+++ b/src/components/ui/Subscribe.astro
@@ -15,7 +15,7 @@ const { class: className } = Astro.props
       type="email"
       name="Email"
       id="email"
-      class="w-full h-full py-2 pl-4 text-sm placeholder:text-grey focus:outline-none focus:ring-2 focus:ring-red-500 shadow-sm border rounded-lg transition"
+      class="w-full h-full py-2 pl-4 text-sm placeholder:text-grey-200 focus:outline-none focus:ring-2 focus:ring-red-500 shadow-sm border rounded-lg transition"
       autocomplete="email"
       placeholder="Enter your email"
       required
